--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= link_to group.custom_name.presence || group.created_at.strftime('%d.%m.%Y'), group %></td>
         <td><%= link_to 'Изменить', edit_group_path(group) %></td>
         <td><%= link_to 'Удалить', group, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
-        <td><%= to_quiz_group_url(group) %></td>
+        <td><%= group.link %></td>
         <td><%= link_to 'Показать QR-код', code_group_path(group) %></td>
       </tr>
     <% end %>
