--- a/app/views/quiz/welcome.html.erb
+++ b/app/views/quiz/welcome.html.erb
@@ -1,8 +1,23 @@
-<h1>Перед прохождением теста введите свои данные: </h1>
+<div class="row">
+  <div class="mt-5 col-4 offset-4">
+    <h1>Перед прохождением теста введите свои данные: </h1>
+    <div class="row">
+      <%= form_with url: personal_info_path, method: :post, class: 'form' do |form| %>
+        <div class="form-group">
+          <%= form.label :name, 'Имя' %>
+          <%= form.text_field :name, class: 'form-control', placeholder: 'Иванов Иван Иванович' %>
+        </div>
+        <div class="form-group">
+          <%= form.label :phone, 'Номер телефона' %>
+          <%= form.text_field :phone, class: 'form-control', placeholder: '89852221133' %>
+        </div>
+        <div class="form-group">
+          <%= form.label :email, 'Адрес электронной почты' %>
+          <%= form.text_field :email, class: 'form-control', type: 'email', placeholder: 'ivan@example.com' %>
+        </div>
+        <%= form.submit 'Начать тест', class: 'btn btn-primary mt-2' %>
 
-<%= form_with url: personal_info_path, method: :post, attempt: @attempt do |form| %>
-  <%= form.text_field :name %>
-  <%= form.text_field :phone %>
-  <%= form.text_field :email %>
-  <%= form.submit 'Начать тест' %>
-<% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
