--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,27 @@
 @import "~bootstrap/scss/bootstrap";
+
+.face {
+  background-color: #42a76f73;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.main-code-input {
+  position: relative;
+  top: 35vh;
+
+  .input-group{
+    height: 10vh;
+
+    input {
+      border-radius: 30px;
+      font-size: x-large;
+    }
+
+  }
+}
+
+#big-code {
+  font-size: xx-large;
+  padding-left: 3%
+}
