--- a/app/views/quiz/quiz.html.erb
+++ b/app/views/quiz/quiz.html.erb
@@ -373,7 +373,7 @@
     </div> -->
   </div>
   <div class="modal_footer modal-footer-finish">
-    <%= button_to "Завершить", quiz_final_path, method: :get, class: "close-finish" %>
+    <%= button_to "Завершить", root_path, method: :get, class: "close-finish" %>
     <!-- <button class="close-finish">Завершить</button> -->
   </div>
 </div>
