--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
+body {
+  overflow-x: hidden;
+}
+
 .face {
   background-color: #42a76f73;
   min-height: 100%;
@@ -21,7 +25,29 @@
   }
 }
 
+
 #big-code {
   font-size: xx-large;
   padding-left: 3%
+}
+
+#before-test-form {
+  background-color: white;
+
+  input[type=submit] {
+    min-width: fit-content;
+  }
+}
+
+.admin {
+  background-color: #382b2e;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+#admin-form {
+  background-color: white;
+  input[type=submit] {
+    min-width: fit-content;
+  }
 }
