--- a/app/views/groups/code.html.erb
+++ b/app/views/groups/code.html.erb
@@ -1,1 +1,10 @@
-<%= @svg.html_safe %>
+<div class="container face h-100 d-flex justify-content-center align-items-center">
+  <div class="row vert">
+    <div class="col">
+      <div class="qr-code border rounded p-5">
+        <%= @svg.html_safe %>
+      </div>
+    </div>
+  </div>
+</div>
+
