--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,34 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="h-100 groups">
+  <h1>Группы</h1>
 
-<h1>Группы</h1>
+  <table class="table">
+    <thead>
+      <th>id</th>
+      <th>Название</th>
+      <th>Результатов</th>
+      <th colspan="2"></th>
+      <th>Ссылка</th>
+      <th>Код группы</th>
+      <th>QR код</th>
+    </thead>
 
-<table class="table">
-  <thead>
-    <th>id</th>
-    <th>Название</th>
-    <th>Результатов</th>
-    <th colspan="2"></th>
-    <th>Ссылка</th>
-    <th>Код группы</th>
-    <th>QR код</th>
-  </thead>
+    <tbody>
+      <% @groups.each do |group| %>
+        <tr>
+          <td><%= group.id %></td>
+          <td><%= link_to group.custom_name.presence || group.created_at.strftime('%d.%m.%Y'), group %></td>
+          <td><%= group.attempts.where.not(main_diagnosis: nil).count %></td>
+          <td><%= link_to 'Изменить', edit_group_path(group) %></td>
+          <td><%= link_to 'Удалить', group, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
+          <td><%= group.link %></td>
+          <td><%= group.id %></td>
+          <td><%= link_to 'Показать QR-код', code_group_path(group) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-  <tbody>
-    <% @groups.each do |group| %>
-      <tr>
-        <td><%= group.id %></td>
-        <td><%= link_to group.custom_name.presence || group.created_at.strftime('%d.%m.%Y'), group %></td>
-        <td><%= group.attempts.count %></td>
-        <td><%= link_to 'Изменить', edit_group_path(group) %></td>
-        <td><%= link_to 'Удалить', group, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
-        <td><%= group.link %></td>
-        <td><%= group.id %></td>
-        <td><%= link_to 'Показать QR-код', code_group_path(group) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <br>
 
-<br>
-
-<%= link_to 'Новая группа', new_group_path %>
+  <%= link_to 'Новая группа', new_group_path %>
+</div>
