--- a/app/views/quiz/welcome.html.erb
+++ b/app/views/quiz/welcome.html.erb
@@ -5,16 +5,16 @@
       <div class="row">
         <%= form_with url: personal_info_path, method: :post, class: 'form' do |form| %>
           <div class="form-group pb-2">
-            <%= form.label :name, 'Имя' %>
-            <%= form.text_field :name, class: 'form-control', placeholder: 'Иванов Иван Иванович' %>
+            <%= form.label :name, 'Имя*' %>
+            <%= form.text_field :name, class: 'form-control', placeholder: 'Иванов Иван Иванович', required: true %>
           </div>
           <div class="form-group pb-2">
             <%= form.label :phone, 'Номер телефона' %>
-            <%= form.text_field :phone, class: 'form-control', placeholder: '89852221133' %>
+            <%= form.text_field :phone, class: 'form-control', placeholder: '89852221133'%>
           </div>
           <div class="form-group pb-2">
-            <%= form.label :email, 'Адрес электронной почты' %>
-            <%= form.text_field :email, class: 'form-control', type: 'email', placeholder: 'ivan@example.com' %>
+            <%= form.label :email, 'Адрес электронной почты*' %>
+            <%= form.text_field :email, class: 'form-control', type: 'email', placeholder: 'ivan@example.com', required: true %>
           </div>
           <div class="row justify-content-end mx-1">
             <%= form.submit 'Начать тест', class: 'btn btn-primary mt-2 col-3' %>
