--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,5 +1,11 @@
-<h1>Изменить группу</h1>
+<div class="container face">
+  <div class="row">
+    <div class="col-4 offset-4 mt-5 border rounded p-3 white-form">
+      <h1>Изменить группу</h1>
 
-<%= render 'form', group: @group %>
+      <%= render 'form', group: @group %>
 
-<%= link_to 'Назад', groups_path %>
+      <%= link_to 'Назад', groups_path %>
+    </div>
+  </div>
+</div>
