--- a/app/views/quiz/welcome.html.erb
+++ b/app/views/quiz/welcome.html.erb
@@ -1,6 +1,6 @@
 <div class="container face">
   <div class="row">
-    <div class="mt-5 col-4 offset-4 border rounded p-3" id="before-test-form">
+    <div class="mt-5 col-4 offset-4 border rounded p-3 white-form">
       <h1>Перед прохождением теста введите свои данные: </h1>
       <div class="row">
         <%= form_with url: personal_info_path, method: :post, class: 'form' do |form| %>
