--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: group) do |form| %>
+<%= form_with(model: group, class: 'form') do |form| %>
   <% if group.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
@@ -11,10 +11,12 @@
     </div>
   <% end %>
 
-  <%= form.label :custom_name, "Название:" %>
-  <%= form.text_field :custom_name %>
+  <div class="form-group pb-2">
+    <%= form.label :custom_name, "Название:" %>
+    <%= form.text_field :custom_name, class: 'form-control' %>
+  </div>
 
-  <div class="actions">
-    <%= form.submit "Сохранить" %>
+  <div class="actions row justify-content-end mx-1">
+    <%= form.submit "Сохранить", class: 'btn btn-primary mt-2 col-3' %>
   </div>
 <% end %>
