--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Group</h1>
+<div class="container face">
+  <div class="row">
+    <div class="col-4 offset-4 mt-5 border rounded p-3">
+      <h1>Новая группа</h1>
 
-<%= render 'form', group: @group %>
+      <%= render 'form', group: @group %>
 
-<%= link_to 'Back', groups_path %>
+      <%= link_to 'Назад', groups_path %>
+    </div>
+  </div>
+</div>
