--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container face">
   <div class="row">
-    <div class="col-4 offset-4 mt-5 border rounded p-3">
+    <div class="col-4 offset-4 mt-5 border rounded p-3 white-form">
       <h1>Новая группа</h1>
 
       <%= render 'form', group: @group %>
